fix(server): fix date present logic by storing an explicit date preset, moving resolution to server
